Add jvm args with add-opens
- when running sample apps
- when running tests

Closes #143